--- a/src/main/RegisterFrame.form
+++ b/src/main/RegisterFrame.form
@@ -29,14 +29,14 @@
     <Property name="useNullLayout" type="boolean" value="false"/>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="jPanel1">
+    <Container class="javax.swing.JPanel" name="pnBackground">
       <Properties>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[1280, 720]"/>
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JPanel(){&#xa;            Image img = new ImageIcon(getClass().getResource(&quot;/image/background/login2.png&quot;)).getImage();&#xa;            public void paintComponent(Graphics g) {//&#xadf8;&#xb9ac;&#xb294; &#xd568;&#xc218;&#xa;                g.drawImage(img, 0, 0, img.getWidth(null), img.getHeight(null), null);//background&#xb97c; &#xadf8;&#xb824;&#xc90c;&#xa;            }&#xa;        }"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JPanel(){&#xa;    Image img = new ImageIcon(getClass().getResource(&quot;/image/background/login_register.png&quot;)).getImage();&#xa;    public void paintComponent(Graphics g) {//&#xadf8;&#xb9ac;&#xb294; &#xd568;&#xc218;&#xa;        g.drawImage(img, 0, 0, img.getWidth(null), img.getHeight(null), null);//background&#xb97c; &#xadf8;&#xb824;&#xc90c;&#xa;    }&#xa;}"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
