--- a/src/main/MainFrame.form
+++ b/src/main/MainFrame.form
@@ -3,6 +3,7 @@
 <Form version="1.9" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" value="InhaCinema"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
@@ -50,7 +51,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="swing.ImageSlider" name="imageSlider1">
+    <Component class="swing.ImageSlider" name="sldImage">
       <Properties>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
