--- a/src/main/RegisterFrame.form
+++ b/src/main/RegisterFrame.form
@@ -7,6 +7,7 @@
     <Property name="location" type="java.awt.Point" editor="org.netbeans.beaninfo.editors.PointEditor">
       <Point value="[125, 30]"/>
     </Property>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -67,7 +68,7 @@
               </Border>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Text Cursor"/>
+              <Color id="&#xae30;&#xbcf8; &#xcee4;&#xc11c;"/>
             </Property>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
